src/binding/petsc4py/src/petsc4py/PETSc/petsctao.pxi

cdef extern from * nogil:

    ctypedef const char* PetscTAOType "TaoType"
    PetscTAOType TAOLMVM
    PetscTAOType TAONLS
    PetscTAOType TAONTR
    PetscTAOType TAONTL
    PetscTAOType TAOCG
    PetscTAOType TAOTRON
    PetscTAOType TAOOWLQN
    PetscTAOType TAOBMRM
    PetscTAOType TAOBLMVM
    PetscTAOType TAOBQNLS
    PetscTAOType TAOBNCG
    PetscTAOType TAOBNLS
    PetscTAOType TAOBNTR
    PetscTAOType TAOBNTL
    PetscTAOType TAOBQNKLS
    PetscTAOType TAOBQNKTR
    PetscTAOType TAOBQNKTL
    PetscTAOType TAOBQPIP
    PetscTAOType TAOGPCG
    PetscTAOType TAONM
    PetscTAOType TAOPOUNDERS
    PetscTAOType TAOBRGN
    PetscTAOType TAOLCL
    PetscTAOType TAOSSILS
    PetscTAOType TAOSSFLS
    PetscTAOType TAOASILS
    PetscTAOType TAOASFLS
    PetscTAOType TAOIPM
    PetscTAOType TAOPDIPM
    PetscTAOType TAOSHELL
    PetscTAOType TAOADMM
    PetscTAOType TAOALMM
    PetscTAOType TAOPYTHON

    ctypedef enum PetscTAOConvergedReason "TaoConvergedReason":
        # iterating
        TAO_CONTINUE_ITERATING
        # converged
        TAO_CONVERGED_GATOL
        TAO_CONVERGED_GRTOL
        TAO_CONVERGED_GTTOL
        TAO_CONVERGED_STEPTOL
        TAO_CONVERGED_MINF
        TAO_CONVERGED_USER
        # diverged
        TAO_DIVERGED_MAXITS
        TAO_DIVERGED_NAN
        TAO_DIVERGED_MAXFCN
        TAO_DIVERGED_LS_FAILURE
        TAO_DIVERGED_TR_REDUCTION
        TAO_DIVERGED_USER

    ctypedef PetscErrorCode (*PetscTaoMonitorDestroy)(void**)
    ctypedef PetscErrorCode PetscTaoConvergenceTest(PetscTAO, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoMonitor(PetscTAO, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoObjective(PetscTAO, PetscVec, PetscReal*, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoResidual(PetscTAO, PetscVec, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoGradient(PetscTAO, PetscVec, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoObjGrad(PetscTAO, PetscVec, PetscReal*, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoRegularizerObjGrad(PetscTAO, PetscVec, PetscReal*, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoVarBounds(PetscTAO, PetscVec, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoConstraints(PetscTAO, PetscVec, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoEqualityConstraints(PetscTAO, PetscVec, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoInequalityConstraints(PetscTAO, PetscVec, PetscVec, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoHessian(PetscTAO, PetscVec, PetscMat, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoRegularizerHessian(PetscTAO, PetscVec, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoJacobian(PetscTAO, PetscVec, PetscMat, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoJacobianResidual(PetscTAO, PetscVec, PetscMat, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoJacobianState(PetscTAO, PetscVec, PetscMat, PetscMat, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoJacobianDesign(PetscTAO, PetscVec, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoJacobianEquality(PetscTAO, PetscVec, PetscMat, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoJacobianInequality(PetscTAO, PetscVec, PetscMat, PetscMat, void*) except PETSC_ERR_PYTHON
    ctypedef PetscErrorCode PetscTaoUpdateFunction(PetscTAO, PetscInt, void*) except PETSC_ERR_PYTHON

    ctypedef enum PetscTAOBNCGType "TaoBNCGType":
        TAO_BNCG_GD
        TAO_BNCG_PCGD
        TAO_BNCG_HS
        TAO_BNCG_FR
        TAO_BNCG_PRP
        TAO_BNCG_PRP_PLUS
        TAO_BNCG_DY
        TAO_BNCG_HZ
        TAO_BNCG_DK
        TAO_BNCG_KD
        TAO_BNCG_SSML_BFGS
        TAO_BNCG_SSML_DFP
        TAO_BNCG_SSML_BRDN

    ctypedef enum PetscTAOALMMType "TaoALMMType":
        TAO_ALMM_CLASSIC
        TAO_ALMM_PHR

    PetscErrorCode TaoMonitor(PetscTAO, PetscInt, PetscReal, PetscReal, PetscReal, PetscReal)
    PetscErrorCode TaoView(PetscTAO, PetscViewer)
    PetscErrorCode TaoDestroy(PetscTAO*)
    PetscErrorCode TaoCreate(MPI_Comm, PetscTAO*)
    PetscErrorCode TaoSetOptionsPrefix(PetscTAO, char[])
    PetscErrorCode TaoAppendOptionsPrefix(PetscTAO, char[])
    PetscErrorCode TaoGetOptionsPrefix(PetscTAO, char*[])
    PetscErrorCode TaoSetFromOptions(PetscTAO)
    PetscErrorCode TaoSetType(PetscTAO, PetscTAOType)
    PetscErrorCode TaoGetType(PetscTAO, PetscTAOType*)

    PetscErrorCode TaoSetUp(PetscTAO)
    PetscErrorCode TaoSolve(PetscTAO)

    PetscErrorCode TaoSetTolerances(PetscTAO, PetscReal, PetscReal, PetscReal)
    PetscErrorCode TaoParametersInitialize(PetscTAO)
    PetscErrorCode TaoGetTolerances(PetscTAO, PetscReal*, PetscReal*, PetscReal*)
    PetscErrorCode TaoSetConstraintTolerances(PetscTAO, PetscReal, PetscReal)
    PetscErrorCode TaoGetConstraintTolerances(PetscTAO, PetscReal*, PetscReal*)

    PetscErrorCode TaoSetFunctionLowerBound(PetscTAO, PetscReal)
    PetscErrorCode TaoSetMaximumIterations(PetscTAO, PetscInt)
    PetscErrorCode TaoGetMaximumIterations(PetscTAO, PetscInt*)
    PetscErrorCode TaoSetMaximumFunctionEvaluations(PetscTAO, PetscInt)
    PetscErrorCode TaoGetMaximumFunctionEvaluations(PetscTAO, PetscInt*)
    PetscErrorCode TaoSetIterationNumber(PetscTAO, PetscInt)
    PetscErrorCode TaoGetIterationNumber(PetscTAO, PetscInt*)

    PetscErrorCode TaoSetTrustRegionTolerance(PetscTAO, PetscReal)
    PetscErrorCode TaoGetInitialTrustRegionRadius(PetscTAO, PetscReal*)
    PetscErrorCode TaoGetTrustRegionRadius(PetscTAO, PetscReal*)
    PetscErrorCode TaoSetTrustRegionRadius(PetscTAO, PetscReal)

    PetscErrorCode TaoDefaultConvergenceTest(PetscTAO, void*) except PETSC_ERR_PYTHON
    PetscErrorCode TaoSetConvergenceTest(PetscTAO, PetscTaoConvergenceTest*, void*)
    PetscErrorCode TaoSetConvergedReason(PetscTAO, PetscTAOConvergedReason)
    PetscErrorCode TaoGetConvergedReason(PetscTAO, PetscTAOConvergedReason*)
    PetscErrorCode TaoLogConvergenceHistory(PetscTAO, PetscReal, PetscReal, PetscReal, PetscInt)
    PetscErrorCode TaoGetSolutionStatus(PetscTAO, PetscInt*,
                                        PetscReal*, PetscReal*,
                                        PetscReal*, PetscReal*,
                                        PetscTAOConvergedReason*)

    PetscErrorCode TaoMonitorSet(PetscTAO, PetscTaoMonitor, void*, PetscTaoMonitorDestroy)
    PetscErrorCode TaoMonitorCancel(PetscTAO)

    PetscErrorCode TaoComputeObjective(PetscTAO, PetscVec, PetscReal*)
    PetscErrorCode TaoComputeResidual(PetscTAO, PetscVec, PetscVec)
    PetscErrorCode TaoComputeGradient(PetscTAO, PetscVec, PetscVec)
    PetscErrorCode TaoComputeObjectiveAndGradient(PetscTAO, PetscVec, PetscReal*, PetscVec)
    PetscErrorCode TaoComputeConstraints(PetscTAO, PetscVec, PetscVec)
    PetscErrorCode TaoComputeDualVariables(PetscTAO, PetscVec, PetscVec)
    PetscErrorCode TaoComputeVariableBounds(PetscTAO)
    PetscErrorCode TaoComputeHessian(PetscTAO, PetscVec, PetscMat, PetscMat)
    PetscErrorCode TaoComputeJacobian(PetscTAO, PetscVec, PetscMat, PetscMat)

    PetscErrorCode TaoSetSolution(PetscTAO, PetscVec)
    PetscErrorCode TaoSetConstraintsVec(PetscTAO, PetscVec)
    PetscErrorCode TaoSetVariableBounds(PetscTAO, PetscVec, PetscVec)

    PetscErrorCode TaoGetSolution(PetscTAO, PetscVec*)
    PetscErrorCode TaoSetGradientNorm(PetscTAO, PetscMat)
    PetscErrorCode TaoGetGradientNorm(PetscTAO, PetscMat*)
    PetscErrorCode TaoLMVMSetH0(PetscTAO, PetscMat)
    PetscErrorCode TaoLMVMGetH0(PetscTAO, PetscMat*)
    PetscErrorCode TaoLMVMGetH0KSP(PetscTAO, PetscKSP*)
    PetscErrorCode TaoBNCGGetType(PetscTAO, PetscTAOBNCGType*)
    PetscErrorCode TaoBNCGSetType(PetscTAO, PetscTAOBNCGType)
    PetscErrorCode TaoGetVariableBounds(PetscTAO, PetscVec*, PetscVec*)

    PetscErrorCode TaoSetObjective(PetscTAO, PetscTaoObjective*, void*)
    PetscErrorCode TaoSetGradient(PetscTAO, PetscVec, PetscTaoGradient*, void*)
    PetscErrorCode TaoSetObjectiveAndGradient(PetscTAO, PetscVec, PetscTaoObjGrad*, void*)
    PetscErrorCode TaoSetHessian(PetscTAO, PetscMat, PetscMat, PetscTaoHessian*, void*)
    PetscErrorCode TaoGetObjective(PetscTAO, PetscTaoObjective**, void**)
    PetscErrorCode TaoGetGradient(PetscTAO, PetscVec*, PetscTaoGradient**, void**)
    PetscErrorCode TaoGetObjectiveAndGradient(PetscTAO, PetscVec*, PetscTaoObjGrad**, void**)
    PetscErrorCode TaoGetHessian(PetscTAO, PetscMat*, PetscMat*, PetscTaoHessian**, void**)
    PetscErrorCode TaoSetResidualRoutine(PetscTAO, PetscVec, PetscTaoResidual, void*)
    PetscErrorCode TaoSetVariableBoundsRoutine(PetscTAO, PetscTaoVarBounds*, void*)
    PetscErrorCode TaoSetConstraintsRoutine(PetscTAO, PetscVec, PetscTaoConstraints*, void*)
    PetscErrorCode TaoSetJacobianRoutine(PetscTAO, PetscMat, PetscMat, PetscTaoJacobian*, void*)
    PetscErrorCode TaoSetJacobianResidualRoutine(PetscTAO, PetscMat, PetscMat, PetscTaoJacobianResidual*, void*)
    PetscErrorCode TaoSetStateDesignIS(PetscTAO, PetscIS, PetscIS)
    PetscErrorCode TaoSetJacobianStateRoutine(PetscTAO, PetscMat, PetscMat, PetscMat, PetscTaoJacobianState*, void*)
    PetscErrorCode TaoSetJacobianDesignRoutine(PetscTAO, PetscMat, PetscTaoJacobianDesign*, void*)
    PetscErrorCode TaoGetLMVMMatrix(PetscTAO, PetscMat*)
    PetscErrorCode TaoSetLMVMMatrix(PetscTAO, PetscMat)

    PetscErrorCode TaoSetEqualityConstraintsRoutine(PetscTAO, PetscVec, PetscTaoEqualityConstraints*, void*)
    PetscErrorCode TaoGetEqualityConstraintsRoutine(PetscTAO, PetscVec*, PetscTaoEqualityConstraints**, void**)
    PetscErrorCode TaoSetJacobianEqualityRoutine(PetscTAO, PetscMat, PetscMat, PetscTaoJacobianEquality*, void*)
    PetscErrorCode TaoGetJacobianEqualityRoutine(PetscTAO, PetscMat*, PetscMat*, PetscTaoJacobianEquality**, void**)
    PetscErrorCode TaoSetInequalityConstraintsRoutine(PetscTAO, PetscVec, PetscTaoInequalityConstraints*, void*)
    PetscErrorCode TaoGetInequalityConstraintsRoutine(PetscTAO, PetscVec*, PetscTaoInequalityConstraints**, void**)
    PetscErrorCode TaoSetJacobianInequalityRoutine(PetscTAO, PetscMat, PetscMat, PetscTaoJacobianInequality*, void*)
    PetscErrorCode TaoGetJacobianInequalityRoutine(PetscTAO, PetscMat*, PetscMat*, PetscTaoJacobianInequality**, void**)
    PetscErrorCode TaoSetUpdate(PetscTAO, PetscTaoUpdateFunction*, void*)

    PetscErrorCode TaoSetInitialTrustRegionRadius(PetscTAO, PetscReal)

    PetscErrorCode TaoGetKSP(PetscTAO, PetscKSP*)
    PetscErrorCode TaoGetLineSearch(PetscTAO, PetscTAOLineSearch*)

    PetscErrorCode TaoALMMGetSubsolver(PetscTAO, PetscTAO*)
    PetscErrorCode TaoALMMSetSubsolver(PetscTAO, PetscTAO)
    PetscErrorCode TaoALMMGetType(PetscTAO, PetscTAOALMMType*)
    PetscErrorCode TaoALMMSetType(PetscTAO, PetscTAOALMMType)

    PetscErrorCode TaoBRGNGetSubsolver(PetscTAO, PetscTAO*)
    PetscErrorCode TaoBRGNSetRegularizerObjectiveAndGradientRoutine(PetscTAO, PetscTaoRegularizerObjGrad*, void*)
    PetscErrorCode TaoBRGNSetRegularizerHessianRoutine(PetscTAO, PetscMat, PetscTaoRegularizerHessian*, void*)
    PetscErrorCode TaoBRGNSetRegularizerWeight(PetscTAO, PetscReal)
    PetscErrorCode TaoBRGNSetL1SmoothEpsilon(PetscTAO, PetscReal)
    PetscErrorCode TaoBRGNSetDictionaryMatrix(PetscTAO, PetscMat)
    PetscErrorCode TaoBRGNGetDampingVector(PetscTAO, PetscVec*)

    PetscErrorCode TaoPythonSetType(PetscTAO, char[])
    PetscErrorCode TaoPythonGetType(PetscTAO, char*[])
